# ffuu

./: .gitignore  Cargo.toml  README.md  shell.nix
ffuu-add/: Cargo.toml
ffuu-add/src/: args.rs  main.rs
ffuu-cli/: Cargo.toml
ffuu-cli/src/: add_file.rs  add_html_file.rs  args.rs  file_helpers.rs  main.rs  process_file.rs
ffuu-html/: Cargo.toml
ffuu-html/src/: lib.rs  main.rs  parse.rs  standard_attributes.rs  standard_elements.rs  types.rs
ffuu-html/src/parse/: mod.rs  parse_comment.rs  parse_doctype.rs  parse_part.rs  parse_tag.rs
ffuu-markdown/: Cargo.toml
ffuu-markdown/src/: main.rs
ffuu-old/: Cargo.toml
ffuu-old/src/: main.rs
html-parse/: Cargo.toml
html-parse/src/: depth.rs  embeds.rs  format.rs  lib.rs  standard_elements.rs  types.rs
html-parse/src/parse/: mod.rs  parse_attribute.rs  parse_part.rs  parse_tag.rs
src/: html_standard.rs  lib.rs  main.rs
